--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ a{
 }
 /*COLORS*/
 :root{
+    --white: #FFF;
     --pastel_clear: #D9C7C5;
     --pastel_dark_purple: #592C38;
     --border-grey: rgba(225, 225, 225, .5);
@@ -263,7 +264,13 @@ footer{
 .creator{
     color: var(--pastel_clear);
 }
-@media (max-width: 800px){
+/*MEDIA QUERY*/
+@media (max-width: 900px){
+    .wrapper{
+        width: 400px;
+        height: 400px;
+        
+    }
     .burgerMenu{
         display: block;
         width: 130px;
@@ -274,11 +281,14 @@ footer{
         border-radius: 6px;
         cursor: pointer;
         font-size: 1.1em;
-        color: var(--withe);
         font-weight: 500;
-        margin-left: 40px;
+        margin-left: 20px;
         transition: .5s;
-
+        font-size: 2em;
+        top: 150;
+        right: 0;
+        position: absolute;
+        z-index: 999px;
     }
     .navegation{
         display: none;
@@ -288,11 +298,72 @@ footer{
     }
     .navegation.viewBurgerMenu{
         display: flex;
-        flex-direction: column-reverse;
+        width: 100%;
+        flex-direction: row;
         align-items: center;
         justify-content: center;
-        gap: 36px;
-        position: sticky;
-        border-top: -300px;
+        position: absolute;
+        top: 0;
+        left: 0px;
+        padding: 16px;
+        background: transparent;
+        border: 2px solid var(--border-grey);
+        backdrop-filter: blur(20px);
+        z-index: 999;
+        font-size: 0.9em;
     } 
 }
+@media (max-width: 700px){
+    .wrapper{
+        width: 400px;
+        height: 400px;
+    }
+    nav > .burgerMenu{
+        display: none;
+    }
+    .burgerMenu{
+        display: block;
+        width: 130px;
+        height: 50px;
+        background: transparent;
+        border: 2px solid var(--withe);
+        outline: none;
+        border-radius: 6px;
+        cursor: pointer;
+        font-size: 1.1em;
+        font-weight: 500;
+        margin-left: 20px;
+        transition: .5s;
+        font-size: 2em;
+        top: 16px;
+        right: 0;
+        position: absolute;
+        z-index: 9999;
+    }
+    .navegation{
+        display: none;
+    }
+    .viewBurgerMenu{
+        display: block;
+    }
+    .navegation.viewBurgerMenu{
+        display: flex;
+        width: 50%;
+        flex-direction: column;
+        align-items: start;
+        justify-content: center;
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding: 64px;
+        background: transparent;
+        border: 2px solid var(--border-grey);
+        backdrop-filter: blur(20px);
+        z-index: 999;
+        font-size: 1em;
+        border-radius: 26px;
+        border-top-left-radius: 0px;
+        gap: 50px;
+    } 
+}
+
