--- a/styles.css
+++ b/styles.css
@@ -350,7 +350,7 @@ footer{
         display: flex;
         width: 50%;
         flex-direction: column;
-        align-items: start;
+        align-items: center;
         justify-content: center;
         position: absolute;
         top: 0;
@@ -366,4 +366,58 @@ footer{
         gap: 50px;
     } 
 }
+@media (max-width: 500px){
+    .wrapper{
+        width: 400px;
+        height: 400px;
+    }
+    nav > .burgerMenu{
+        display: none;
+    }
+    .burgerMenu{
+        display: block;
+        width: 130px;
+        height: 50px;
+        background: transparent;
+        border: 2px solid var(--withe);
+        outline: none;
+        border-radius: 6px;
+        cursor: pointer;
+        font-size: 1.1em;
+        font-weight: 500;
+        margin-left: 20px;
+        transition: .5s;
+        font-size: 2em;
+        top: 16px;
+        right: 0;
+        position: absolute;
+        z-index: 9999;
+    }
+    .navegation{
+        display: none;
+    }
+    .viewBurgerMenu{
+        display: block;
+    }
+    .navegation.viewBurgerMenu{
+        display: flex;
+        width: 65%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding: 64px;
+        background: transparent;
+        border: 2px solid var(--border-grey);
+        backdrop-filter: blur(20px);
+        z-index: 999;
+        font-size: 1em;
+        border-radius: 26px;
+        border-top-left-radius: 0px;
+        gap: 50px;
+    } 
+}
+
 
